--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     and even now I don't know how well it will play with other screen resolutions.-->
 <main>
     <div>
-        <img src="/images/soniclogo.png" id="floating" >;
+        <img src="/images/logo.png" id="floating" >;
     </div>
         <!--I wanted to get a thick outline on this text with .css but apparently it doesn't support that? this is as close as I could get and I'm still not super happy with it-->
         <h1>Press START</h1>
