--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <!--That's right, an audio element. I did try making autoplay work but I was foiled by modern web design. I am the reason that Jesus wept in the Garden of Gethsemane,
  eventually I want to figure out how to get it so if you press enter it plays the music, but for now it's constrained to a tiny little box under the <p> -->
-<audio autoplay controls>
+<audio controls>
     <source src="cursedthings/sonicmenu.mp3" type="audio/mpeg">
     <source src="cursedthings/sonicmenu.ogg" type ="audio/ogg">
 </audio>
