--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-    
 <meta name="description" content="I have birthed a great evil upon the internet and would have done worse if I knew Javascript. God cannot forgive my sins">
 <title>Sonic Adventure 2 Menu</title>
 <link rel="stylesheet" href="styles.css">
-<link rel="icon" href="favicon.ico"> <!--favicon credit: https://www.steamgriddb.com/icon/912-->
+<link rel="icon" href="/images/favicon.ico"> <!--favicon credit: https://www.steamgriddb.com/icon/912-->
 </head>
 <body>
     <!--this is the logo in the center, it was a bigger pain in the ass than I expected to get it to sit where I wanted it to sit
     and even now I don't know how well it will play with other screen resolutions.-->
 <main>
     <div>
-        <img src="logo.png" id="floating" >;
+        <img 
+            src="/images/logo.png"
+            id="floating" 
+            >;
     </div>
         <!--I wanted to get a thick outline on this text with .css but apparently it doesn't support that? this is as close as I could get and I'm still not super happy with it-->
         <h1>Press START</h1>
@@ -26,8 +28,8 @@
 <!--That's right, an audio element. I did try making autoplay work but I was foiled by modern web design. I am the reason that Jesus wept in the Garden of Gethsemane,
  eventually I want to figure out how to get it so if you press enter it plays the music, but for now it's constrained to a tiny little box under the <p> -->
 <audio controls>
-    <source src="sonicmenu.mp3" type="audio/mpeg">
-    <source src="sonicmenu.ogg" type ="audio/ogg">
+    <source src="cursedthings/sonicmenu.mp3" type="audio/mpeg">
+    <source src="cursedthings/sonicmenu.ogg" type ="audio/ogg">
 </audio>
 </footer>
 
